--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 body {
-  background-color: #f3f4f6; /* Un gris suave */
+  background-color: #f3f4f6;
+  /* Un gris suave */
 }
